--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Acceleration Example</title>
 
-    <script type="text/javascript" charset="utf-8" src="phonegap-1.2.0.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8">
 
         // The watch id references the current `watchAcceleration`
